<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.example.thu_4over6_vpn.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/label_app"
            style="@style/item"
            android:gravity="center"
            android:text="@string/logo_name"
            android:textSize="30sp" />
        <ImageView
            android:id="@+id/line"
            android:layout_width="389dp"
            android:layout_height="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:srcCompat="@mipmap/line" />

        <ImageView
            android:id="@+id/item_logo"
            android:layout_width="389dp"
            android:layout_height="238dp"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:srcCompat="@mipmap/logo" />

        <TextView
            android:id="@+id/label_address"
            style="@style/item"

            android:text="@string/address" />

        <EditText
            android:id="@+id/address"
            style="@style/item"

            android:text="@string/server_ip" />

        <TextView
            android:id="@+id/label_port"
            style="@style/item"

            android:text="@string/port" />

        <EditText
            android:id="@+id/port"
            style="@style/item"

            android:text="@string/server_port" />

        <TextView
            android:id="@+id/label_local_ipv6"
            style="@style/item"

            android:text="@string/local_address" />

        <EditText
            android:id="@+id/local_address"
            style="@style/item"
            android:focusable="false"
            android:text="@string/local_ip" />

        <Button
            android:id="@+id/start_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_service" />
        <TextView
            android:id="@+id/time_duration"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/run_time"/>
        <TextView
            android:id="@+id/up_speed_info"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/up_speed"/>
        <TextView
            android:id="@+id/down_speed_info"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/down_speed"/>
        <TextView
            android:id="@+id/send_info"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/send_pk_info"/>
        <TextView
            android:id="@+id/receive_info"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/receive_pk_info"/>
        <TextView
            android:id="@+id/ipv4_addr"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/ipv4_addr"/>
        <TextView
            android:id="@+id/ipv6_addr"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/ipv6_addr"/>
        <Button
            android:id="@+id/stop_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stop_service" />
        <Button
            android:id="@+id/quit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quit_button" />
        <TextView
            android:id="@+id/label_workers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/workers"
            android:textSize="10dp" />
    </LinearLayout>
</ScrollView>
